--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #212121;
+  /* background-color: #212121; */
+  width: 100%;
+  height: 100vh;
+  font-size: 16px;
+}
+
+.header {
+  background-color: aliceblue;
+  background-image: url("/img/planetayo.png");
+  width: 100%;
+  height: 35vh;
+  position: fixed;
+}
+
+.profile-info {
+    position: fixed;
+    width: 100%;
+    top: 25vh;
+}
+
+.navbar-img {
+  width: 8em;
+  /* border-radius: 33em; */
 }
