--- a/style.css
+++ b/style.css
@@ -7,22 +7,27 @@
 body {
   /* background-color: #212121; */
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   font-size: 16px;
 }
 
 .header {
   background-color: aliceblue;
   background-image: url("/img/planetayo.png");
-  width: 100%;
+  /* width: 100%; */
   height: 35vh;
-  position: fixed;
+  /* position: fixed; */
+}
+
+.img-header {
+  width: 11vw;
 }
 
 .profile-info {
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
-    top: 25vh;
+    bottom: 11vh;
+    /* left: 7%; */
 }
 
 .navbar-img {
